# Google-analytics-and-search-console

./: .dockerignore  .gitignore  =5.6.3  AUTHENTICATION_GUIDE.md  CACHING_IMPROVEMENTS_SUMMARY.md  CLOUDFLARE_AUTH_SOLUTIONS.md  DOCKER_QUICKSTART.md  Dockerfile  ENHANCED_CACHING_GUIDE.md  GA4query.py  GA4query2.py  GA4query3-help.md  GA4query3.py  GRADIO_README.md  GSC_DOMAIN_LISTING_FIX.md  MCP_MULTI_PROPERTY_TECHNICAL_EXAMPLES.md  MCP_MULTI_PROPERTY_UPGRADE_SPECIFICATION.md  MCP_MULTI_PROPERTY_UPGRADE_SUMMARY.md  MCP_SERVER_ENHANCEMENTS_SUMMARY.md  NewDownloads-help.md  NewDownloads.py  NewDownloads_clean.py  OPTIMIZATION_GUIDE.md  README.md  SIMPLIFIED_API_README.md  SINGLE_DOMAIN_FILTERING.md  WEBAPP_README.md  cache_utils.py  cloudflared-config-example.yml  curl_examples.sh  debug_gsc_issue.py  demo_domain_property_fix.py  demo_performance.py  demo_single_domain_features.py  demo_usage.py  docker-compose.yaml  docker-entrypoint.sh  ga4_add-user.py  ga4_gsc_web_interface.py  ga4_property_access_automation.py  (+31 more)
.github/: copilot-instructions.md
scripts/: ga4_progress_smoke.py  gsc_progress_smoke.py  query_polling_smoke.py
tests/: test_progress_harness.py
webapp/backend/: app.py  shared_state.py
webapp/backend/core/: cache.py  query_models.py
webapp/backend/data_providers/: __init__.py  aggregate_domains.py  ga4_provider.py  gsc_provider.py  registry.py
webapp/backend/routes/: __init__.py  meta.py  presets.py  query.py
webapp/config/: sites.yaml
webapp/frontend/: index.html
webapp/frontend/static/css/: main.css
webapp/frontend/static/js/: main.js  (+2 more)
