[project]
name = "google-analytics-and-search-console"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-analytics-admin>=0.23.4",
    "google-analytics-data>=0.18.17",
    "google-api-python-client>=2.161.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "httplib2>=0.22.0",
    "oauth2client>=4.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "progress>=1.6",
    "protobuf>=5.29.3",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "urllib3>=2.3.0",
    "win-unicode-console>=0.5",
]
